Mon Nov 12 10:07:05 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next release

Mon Nov 12 09:34:14 CET 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 1.1.6 released.

Fri Oct 12 11:18:03 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_Transaction.idl:
          Removed old comment

        * ciao/Deployment/Interceptors/Deployment_Interceptors.cpp:
          Fixed some logging statements

Fri Oct 12 10:53:23 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for x.1.5

Fri Oct 12 11:20:25 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 1.1.5 released.

Mon Oct  8 08:02:52 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/Component_Handler.cpp:
        * ciao/Deployment/Handlers/Home_Handler.cpp:
          Fixed logging messages

Fri Oct  5 06:26:38 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Hello_Event/descriptors/run_test_shs.pl:
          Fixed path

Wed Oct  3 06:19:55 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Session/Session_Container.cpp:
          Fixed typo in error message

        * connectors/dds4ccm/impl/ndds/Topic.cpp:
          layout changes

        * connectors/dds4ccm/tests/Policies/run_test.pl:
        * connectors/dds4ccm/tests/TimeConversion/run_test.pl:
        * connectors/dds4ccm/tests/TypeSupport/run_test.pl:
          Check all return values, directly exit when the test has ended

        * examples/Hello_Event/descriptors/run_test_shs.pl:
          Corrected path of sender

Tue Oct  2 17:50:55 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/convertors/StringSeq.h:
        * connectors/dds4ccm/tests/Policies/main.cpp:
        * connectors/dds4ccm/tests/Policies/policies.mpc:
        * connectors/dds4ccm/tests/Policies/string_seq.h: